[gd_scene load_steps=2 format=3 uid="uid://dyamyrk7gbh4"]

[ext_resource type="Script" path="res://scripts/ui/hero_selection.gd" id="1_hero"]

[node name="HeroSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hero")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "CHOOSE YOUR HERO"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Each hero has unique abilities that shape your playstyle"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HeroContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SelectButton1" type="Button" parent="CenterContainer/VBoxContainer/HeroContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 500)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
mouse_filter = 2

[node name="HeroName" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EARTH"
horizontal_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="HeroElement" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.4, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Element: Earth"
horizontal_alignment = 1
mouse_filter = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HeroDescription" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton1/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Steadfast guardian rooted in strength."
autowrap_mode = 3
horizontal_alignment = 1
mouse_filter = 2

[node name="SelectButton2" type="Button" parent="CenterContainer/VBoxContainer/HeroContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 500)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
mouse_filter = 2

[node name="HeroName" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FIRE"
horizontal_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="HeroElement" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.1, 1)
theme_override_font_sizes/font_size = 14
text = "Element: Fire"
horizontal_alignment = 1
mouse_filter = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HeroDescription" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Fierce warrior channeling flame's power."
autowrap_mode = 3
horizontal_alignment = 1
mouse_filter = 2

[node name="SelectButton3" type="Button" parent="CenterContainer/VBoxContainer/HeroContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 500)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
mouse_filter = 2

[node name="HeroName" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RANDOM"
horizontal_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="HeroElement" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Element: ???"
horizontal_alignment = 1
mouse_filter = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HeroDescription" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Embrace the unknown."
autowrap_mode = 3
horizontal_alignment = 1
mouse_filter = 2

[node name="SelectButton4" type="Button" parent="CenterContainer/VBoxContainer/HeroContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 500)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
mouse_filter = 2

[node name="HeroName" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "AIR"
horizontal_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="HeroElement" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Element: Air"
horizontal_alignment = 1
mouse_filter = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HeroDescription" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Swift tactician striking with wind's speed."
autowrap_mode = 3
horizontal_alignment = 1
mouse_filter = 2

[node name="SelectButton5" type="Button" parent="CenterContainer/VBoxContainer/HeroContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 500)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
mouse_filter = 2

[node name="HeroName" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WATER"
horizontal_alignment = 1
autowrap_mode = 3
mouse_filter = 2

[node name="HeroElement" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.5, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Element: Water"
horizontal_alignment = 1
mouse_filter = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HeroDescription" type="Label" parent="CenterContainer/VBoxContainer/HeroContainer/SelectButton5/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Adaptive sage flowing with wisdom."
autowrap_mode = 3
horizontal_alignment = 1
mouse_filter = 2
